--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="md:w-1/3 flex justify-center" data-aos="zoom-in">
             <div class="relative">
                 <div class="absolute -inset-1 bg-gradient-to-r from-cyan-400 to-blue-600 rounded-full blur opacity-75"></div>
-                <img src="/assets/images/img.png" alt="Abrar Saleem" class="relative rounded-full w-64 h-64 object-cover border-4 border-slate-900">
+                <img src="/img.png" alt="Abrar Saleem" class="relative rounded-full w-64 h-64 object-cover border-4 border-slate-900">
             </div>
         </div>
     </section>
