--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <nav class="fixed w-full z-50 glass px-6 py-4 flex justify-between items-center">
         <div class="text-2xl font-bold gradient-text">ABRAR SALEEM</div>
         <div class="hidden md:flex space-x-8">
-            <a href="/Pages/about.html" class="hover:text-cyan-400 transition">About</a>
-            <a href="/Pages/skills.html" class="hover:text-cyan-400 transition">Skills</a>
-            <a href="/Pages/experience.html" class="hover:text-cyan-400 transition">Experience</a>
-            <a href="/Pages/projects.html" class="hover:text-cyan-400 transition">Projects</a>
-            <a href="/Pages/contact.html" class="hover:text-cyan-400 transition">Contact</a>
+            <a href="/about.html" class="hover:text-cyan-400 transition">About</a>
+            <a href="/skills.html" class="hover:text-cyan-400 transition">Skills</a>
+            <a href="/experience.html" class="hover:text-cyan-400 transition">Experience</a>
+            <a href="/projects.html" class="hover:text-cyan-400 transition">Projects</a>
+            <a href="/contact.html" class="hover:text-cyan-400 transition">Contact</a>
         </div>
     </nav>
 
@@ -44,14 +44,14 @@
             <h1 class="text-5xl md:text-7xl font-extrabold mb-4">Hi, I'm <span class="gradient-text">Abrar</span></h1>
             <p class="text-xl text-gray-400 mb-6"><strong>Accomplished Software Engineer</strong> with over 2 years of experience specializing in the Microsoft technology stack.</p>
             <div class="flex space-x-4">
-                <a href="/Pages/contact.html" class="bg-cyan-600 hover:bg-cyan-500 px-8 py-3 rounded-full font-bold transition">Hire Me</a>
-                <a href="/Pages/projects.html" class="border border-cyan-600 px-8 py-3 rounded-full font-bold hover:bg-cyan-600/20 transition">View Work</a>
+                <a href="/contact.html" class="bg-cyan-600 hover:bg-cyan-500 px-8 py-3 rounded-full font-bold transition">Hire Me</a>
+                <a href="/projects.html" class="border border-cyan-600 px-8 py-3 rounded-full font-bold hover:bg-cyan-600/20 transition">View Work</a>
             </div>
         </div>
         <div class="md:w-1/3 flex justify-center" data-aos="zoom-in">
             <div class="relative">
                 <div class="absolute -inset-1 bg-gradient-to-r from-cyan-400 to-blue-600 rounded-full blur opacity-75"></div>
-                <img src="/img.png" alt="Abrar Saleem" class="relative rounded-full w-64 h-64 object-cover border-4 border-slate-900">
+                <img src="/assets/images/img.png" alt="Abrar Saleem" class="relative rounded-full w-64 h-64 object-cover border-4 border-slate-900">
             </div>
         </div>
     </section>
@@ -139,4 +139,5 @@
         AOS.init({ duration: 1000, once: true });
     </script>
 </body>
+
 </html>
