--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <nav class="fixed w-full z-50 glass px-6 py-4 flex justify-between items-center">
         <div class="text-2xl font-bold gradient-text">ABRAR SALEEM</div>
         <div class="hidden md:flex space-x-8">
-            <a href="/about.html" class="hover:text-cyan-400 transition">About</a>
-            <a href="/skills.html" class="hover:text-cyan-400 transition">Skills</a>
-            <a href="/experience.html" class="hover:text-cyan-400 transition">Experience</a>
-            <a href="/projects.html" class="hover:text-cyan-400 transition">Projects</a>
-            <a href="/contact.html" class="hover:text-cyan-400 transition">Contact</a>
+            <a href="/Portofolio/about.html" class="hover:text-cyan-400 transition">About</a>
+            <a href="/Portofolio/skills.html" class="hover:text-cyan-400 transition">Skills</a>
+            <a href="/Portofolio/experience.html" class="hover:text-cyan-400 transition">Experience</a>
+            <a href="/Portofolio/projects.html" class="hover:text-cyan-400 transition">Projects</a>
+            <a href="/Portofolio/contact.html" class="hover:text-cyan-400 transition">Contact</a>
         </div>
     </nav>
 
@@ -141,3 +141,4 @@
 </body>
 
 </html>
+
