--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,56 @@
 </head>
 <body>  
     
-    <nav class="fixed w-full z-50 glass px-6 py-4 flex justify-between items-center">
+<nav class="fixed w-full z-50 glass px-6 py-4">
+    <div class="flex justify-between items-center">
+        <!-- Logo -->
         <div class="text-2xl font-bold gradient-text">ABRAR SALEEM</div>
+
+        <!-- Desktop Menu -->
         <div class="hidden md:flex space-x-8">
-            <a href="index.html" class="hover:text-cyan-400 transition">Home</a>
-            <a href="about.html" class="hover:text-cyan-400 transition">About</a>
-            <a href="skills.html" class="hover:text-cyan-400 transition">Skills</a>
-            <a href="experience.html" class="hover:text-cyan-400 transition">Experience</a>
-            <a href="contact.html" class="hover:text-cyan-400 transition">Contact</a>
+            <a href="/Portofolio/about.html" class="hover:text-cyan-400 transition">About</a>
+            <a href="/Portofolio/skills.html" class="hover:text-cyan-400 transition">Skills</a>
+            <a href="/Portofolio/experience.html" class="hover:text-cyan-400 transition">Experience</a>
+            <a href="/Portofolio/projects.html" class="hover:text-cyan-400 transition">Projects</a>
+            <a href="/Portofolio/contact.html" class="hover:text-cyan-400 transition">Contact</a>
         </div>
-    </nav>
+
+        <!-- Hamburger Button -->
+        <button id="menuBtn" class="md:hidden text-gray-200 focus:outline-none">
+            <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2"
+                viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+        </button>
+    </div>
+
+    <!-- Mobile Menu -->
+<div id="mobileMenu"
+    class="hidden md:hidden mt-4 bg-slate-900/95 rounded-xl p-6 flex flex-col space-y-4">
+       <a href="/Portofolio/about.html"
+   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
+   About
+</a>
+<a href="/Portofolio/skills.html"
+   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
+   Skills
+</a>
+<a href="/Portofolio/experience.html"
+   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
+   Experience
+</a>
+<a href="/Portofolio/projects.html"
+   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
+   Projects
+</a>
+<a href="/Portofolio/contact.html"
+   class="block w-full py-2 hover:text-cyan-400 transition">
+   Contact
+</a>
+
+    </div>
+</nav>
 
     <section class="py-20 bg-slate-900 min-h-screen pt-40 px-6">
         <div class="max-w-4xl mx-auto">
@@ -93,6 +133,15 @@
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    const menuBtn = document.getElementById("menuBtn");
+    const mobileMenu = document.getElementById("mobileMenu");
+
+    menuBtn?.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+    });
+</script>
+
     <script>
         AOS.init({ 
             duration: 1000, 
