--- a/skills.html
+++ b/skills.html
@@ -32,21 +32,23 @@
     
 <nav class="fixed w-full z-50 glass px-6 py-4">
     <div class="flex justify-between items-center">
-        <!-- Logo -->
-        <div class="text-2xl font-bold gradient-text">ABRAR SALEEM</div>
+        <div class="text-2xl font-bold gradient-text">
+            <a href="index.html">ABRAR SALEEM</a>
+        </div>
 
         <!-- Desktop Menu -->
         <div class="hidden md:flex space-x-8">
-            <a href="/Portofolio/about.html" class="hover:text-cyan-400 transition">About</a>
-            <a href="/Portofolio/skills.html" class="hover:text-cyan-400 transition">Skills</a>
-            <a href="/Portofolio/experience.html" class="hover:text-cyan-400 transition">Experience</a>
-            <a href="/Portofolio/projects.html" class="hover:text-cyan-400 transition">Projects</a>
-            <a href="/Portofolio/contact.html" class="hover:text-cyan-400 transition">Contact</a>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About</a>
+            <a href="skills.html" class="nav-link">Skills</a>
+            <a href="experience.html" class="nav-link">Experience</a>
+            <a href="projects.html" class="nav-link">Projects</a>
+            <a href="contact.html" class="nav-link">Contact</a>
         </div>
 
-        <!-- Hamburger Button -->
-        <button id="menuBtn" class="md:hidden text-gray-200 focus:outline-none">
-            <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2"
+        <!-- Hamburger -->
+        <button id="menuBtn" class="md:hidden focus:outline-none">
+            <svg class="w-8 h-8 text-gray-200" fill="none" stroke="currentColor" stroke-width="2"
                 viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round"
                     d="M4 6h16M4 12h16M4 18h16" />
@@ -55,31 +57,17 @@
     </div>
 
     <!-- Mobile Menu -->
-<div id="mobileMenu"
-    class="hidden md:hidden mt-4 bg-slate-900/95 rounded-xl p-6 flex flex-col space-y-4">
-       <a href="/Portofolio/about.html"
-   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
-   About
-</a>
-<a href="/Portofolio/skills.html"
-   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
-   Skills
-</a>
-<a href="/Portofolio/experience.html"
-   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
-   Experience
-</a>
-<a href="/Portofolio/projects.html"
-   class="block w-full py-2 border-b border-slate-700 hover:text-cyan-400 transition">
-   Projects
-</a>
-<a href="/Portofolio/contact.html"
-   class="block w-full py-2 hover:text-cyan-400 transition">
-   Contact
-</a>
-
+    <div id="mobileMenu"
+        class="hidden md:hidden mt-4 bg-slate-900/95 rounded-xl p-6 flex flex-col space-y-4">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="skills.html" class="nav-link">Skills</a>
+        <a href="experience.html" class="nav-link">Experience</a>
+        <a href="projects.html" class="nav-link">Projects</a>
+        <a href="contact.html" class="nav-link">Contact</a>
     </div>
 </nav>
+
 
 <section class="py-20 bg-slate-900 min-h-screen pt-32 px-6">
     <div class="max-w-6xl mx-auto text-center">
@@ -127,7 +115,16 @@
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
+<script>
+    const currentPage = location.pathname.split("/").pop() || "index.html";
+
+    document.querySelectorAll(".nav-link").forEach(link => {
+        if (link.getAttribute("href") === currentPage) {
+            link.classList.add("nav-link-active");
+        }
+    });
+
+    // Mobile menu toggle
     const menuBtn = document.getElementById("menuBtn");
     const mobileMenu = document.getElementById("mobileMenu");
 
