--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Abrar Saleem | Software Engineer Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/Portofolio/assets/css/style.css" rel="stylesheet">
     <style>
         .glass {
             background: rgba(255, 255, 255, 0.1);
