removed extra itations

--- a/projects.html
+++ b/projects.html
@@ -73,8 +73,8 @@
         
         <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
             <div class="glass p-8 rounded-2xl border border-slate-800" data-aos="flip-left">
-                [_start]<h3 class="text-2xl font-bold text-cyan-400 mb-4">Selltime Integrated Web Platform [: 17]</h3>
-                [_start]<p class="text-gray-400 text-sm mb-6">Integrated MVC platform designed to deploy and manage a diverse portfolio of web properties using a centralized Web API[: 17, 18].</p>
+            <h3 class="text-2xl font-bold text-cyan-400 mb-4">Selltime Integrated Web Platform </h3>
+            <p class="text-gray-400 text-sm mb-6">Integrated MVC platform designed to deploy and manage a diverse portfolio of web properties using a centralized Web API.</p>
                 <div class="flex flex-wrap gap-2">
                     <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">ASP.NET MVC</span>
                     <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">Web API</span>
@@ -83,8 +83,8 @@
             </div>
 
             <div class="glass p-8 rounded-2xl border border-slate-800" data-aos="flip-right">
-                [_start]<h3 class="text-2xl font-bold text-cyan-400 mb-4">Dynamic CMS Portal [: 19]</h3>
-                [_start]<p class="text-gray-400 text-sm mb-6">Custom CMS built with Angular frontend and .NET Web API backend for real-time website data management[: 19, 24].</p>
+            <h3 class="text-2xl font-bold text-cyan-400 mb-4">Dynamic CMS Portal</h3>
+            <p class="text-gray-400 text-sm mb-6">Custom CMS built with Angular frontend and .NET Web API backend for real-time website data management.</p>
                 <div class="flex flex-wrap gap-2">
                     <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">Angular</span>
                     <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">.NET Core</span>
