--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2 md:pr-12 md:text-right mb-4 md:mb-0">
-                        <span class="text-cyan-400 font-bold text-sm tracking-widest uppercase">May 2023 - Present</span> 
-                        <h3 class="text-2xl font-bold text-white mt-1">Software Developer</h3> 
+                        <span class="text-cyan-400 font-bold text-sm tracking-widest uppercase">May 2023 - Sep 2025</span> 
+                        <h3 class="text-2xl font-bold text-white mt-1">Full Stack Developer</h3> 
                         <p class="text-gray-400 font-medium">SELLTIME PTY (LTD), Australia (Remote)</p> 
                     </div>
 
@@ -114,7 +114,7 @@
                                 </li>
                                 <li class="flex items-start">
                                     <span class="text-cyan-500 mr-2">•</span>
-                                    <span>Built a dynamic, component-based CMS portal using Angular for real-time updates.</span>
+                                    <span>Built a dynamic, component-based CMS portal using .NET and Angular for real-time updates.</span>
                                 </li>
                                 <li class="flex items-start">
                                     <span class="text-cyan-500 mr-2">•</span>
@@ -129,17 +129,21 @@
             <div class="relative pl-8 md:pl-0" data-aos="fade-up">
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2 md:pr-12 md:text-right mb-4 md:mb-0">
-                        <span class="text-cyan-400 font-bold text-sm tracking-widest uppercase">April 2024 - Continue</span> 
-                        <h3 class="text-2xl font-bold text-white mt-1">Fullstack Developer</h3> 
-                        <p class="text-gray-400 font-medium">SELLTIME PTY LTD (Australia)</p> 
+                        <span class="text-cyan-400 font-bold text-sm tracking-widest uppercase">Sep 2025 - Continue</span> 
+                        <h3 class="text-2xl font-bold text-white mt-1">Software Engineer</h3> 
+                        <p class="text-gray-400 font-medium">MTBC CareCloud, Rawalpindi</p> 
                     </div>
                     <div class="absolute left-0 md:left-1/2 transform md:-translate-x-1/2 w-4 h-4 bg-cyan-500 rounded-full border-4 border-slate-900 z-10"></div>
                     <div class="md:w-1/2 md:pl-12 text-left">
                         <div class="glass p-6 rounded-xl border border-slate-700/50">
                             <ul class="text-gray-300 space-y-3 text-sm">
+                                 <li class="flex items-start">
+                                    <span class="text-cyan-500 mr-2">•</span>
+                                    <span>Working on Health Care Product (.Net + Vue js).</span>
+                                </li>
                                 <li class="flex items-start">
                                     <span class="text-cyan-500 mr-2">•</span>
-                                    <span>Enhanced .NET Core APIs and Angular-based frontends to improve functionality.</span>
+                                    <span>Enhanced .NET Core APIs and Vue-based frontends to improve functionality.</span>
                                 </li>
                                 <li class="flex items-start">
                                     <span class="text-cyan-500 mr-2">•</span>
