--- a/projects.html
+++ b/projects.html
@@ -83,12 +83,24 @@
             </div>
 
             <div class="glass p-8 rounded-2xl border border-slate-800" data-aos="flip-right">
-            <h3 class="text-2xl font-bold text-cyan-400 mb-4">Dynamic CMS Portal</h3>
+            <h3 class="text-2xl font-bold text-cyan-400 mb-4">Dynamic CMS Portal (SaaS)</h3>
             <p class="text-gray-400 text-sm mb-6">Custom CMS built with Angular frontend and .NET Web API backend for real-time website data management.</p>
                 <div class="flex flex-wrap gap-2">
                     <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">Angular</span>
                     <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">.NET Core</span>
                     <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">CMS</span>
+                </div>
+            </div>
+
+             <div class="glass p-8 rounded-2xl border border-slate-800" data-aos="flip-left">
+            <h3 class="text-2xl font-bold text-cyan-400 mb-4">Healthcare Product (PSS) </h3>
+            <p class="text-gray-400 text-sm mb-6">Integrated .NET web API with vue js in dynamic health care Product.</p>
+                <div class="flex flex-wrap gap-2">
+                    <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">.NET Web API</span>
+                    <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">Vue.js</span>
+                    <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">EF Core</span>
+                    <span class="bg-slate-800 text-xs px-3 py-1 rounded text-gray-300">Dapper</span>
+
                 </div>
             </div>
         </div>
