--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         <div class="grid md:grid-cols-2 gap-12 items-center">
             <div data-aos="fade-right">
                 <p class="text-gray-300 text-lg leading-relaxed mb-6">
-                    I am an accomplished Software Engineer with over 2 years of experience specializing in the Microsoft technology stack. I have a proven track record of designing, developing, and deploying robust, scalable web applications using C#, .NET Core, ASP.NET MVC and Angular.
+                    I am an accomplished Software Engineer with over 2 years of experience specializing in the Microsoft technology stack. I have a proven track record of designing, developing, and deploying robust, scalable web applications using C#, .NET , .NET Core, Angular, Vue.js, ASP.NET MVC.
                 </p>
                 <p class="text-gray-300 text-lg leading-relaxed">
                     A proactive problem-solver and effective communicator, I am dedicated to writing clean, efficient code and delivering high-quality software solutions in collaborative team environments. I focus on performance and usability in every project I undertake.
