--- a/contact.html
+++ b/contact.html
@@ -80,16 +80,29 @@
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-                    <div class="flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
-                        <div class="bg-cyan-500/10 p-4 rounded-full mb-4">
-                            <svg class="w-8 h-8 text-cyan-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
-                            </svg>
-                        </div>
-                        <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">Phone</p>
-                        <p class="text-gray-200 font-semibold">+923495749679</p>
-                        <p class="text-gray-200 font-semibold">+923118990110</p>
-                    </div>
+<div class="flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
+    <div class="bg-emerald-500/10 p-4 rounded-full mb-4">
+        <!-- WhatsApp Icon -->
+        <svg class="w-8 h-8 text-emerald-400" viewBox="0 0 32 32" fill="currentColor">
+            <path d="M16.003 3.2c-7.064 0-12.8 5.736-12.8 12.8 0 2.255.586 4.461 1.699 6.411L3.2 28.8l6.584-1.664A12.745 12.745 0 0016.003 28.8c7.064 0 12.797-5.736 12.797-12.8 0-7.064-5.733-12.8-12.797-12.8zm0 23.04c-2.085 0-4.133-.547-5.923-1.584l-.424-.251-3.907.989 1.043-3.803-.277-.453a10.2 10.2 0 01-1.549-5.338c0-5.645 4.593-10.24 10.24-10.24 5.645 0 10.237 4.595 10.237 10.24 0 5.647-4.592 10.24-10.237 10.24zm5.67-7.731c-.309-.155-1.829-.901-2.112-1.003-.283-.104-.491-.155-.699.155-.208.309-.803 1.003-.985 1.211-.181.208-.363.233-.672.077-.309-.155-1.303-.48-2.482-1.531-.917-.817-1.537-1.827-1.718-2.136-.181-.309-.019-.477.136-.632.139-.138.309-.363.464-.545.155-.181.208-.309.309-.517.104-.208.052-.389-.026-.545-.078-.155-.699-1.685-.957-2.307-.251-.603-.507-.521-.699-.531l-.597-.01c-.208 0-.545.077-.829.389-.283.309-1.086 1.061-1.086 2.587 0 1.525 1.112 3.001 1.267 3.209.155.208 2.19 3.345 5.305 4.692.741.32 1.318.512 1.771.656.744.237 1.421.203 1.957.123.597-.089 1.829-.747 2.085-1.469.257-.721.257-1.339.181-1.469-.078-.129-.283-.207-.592-.361z"/>
+        </svg>
+    </div>
+
+    <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">
+        WhatsApp
+    </p>
+
+    <a href="https://wa.me/923118990110" target="_blank"
+       class="text-gray-200 font-semibold hover:text-emerald-400 transition">
+        +92 311 8990110
+    </a>
+
+    <a href="https://wa.me/923495749679" target="_blank"
+       class="text-gray-200 font-semibold hover:text-emerald-400 transition">
+        +92 349 5749679
+    </a>
+</div>
+
 
                     <div class="flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
                         <div class="bg-cyan-500/10 p-4 rounded-full mb-4">
@@ -98,8 +111,8 @@
                             </svg>
                         </div>
                         <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">Email</p>
-                        <a href="mailto:abrarqazi9296@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">abrarqazi9296@gmail.com</a>
-                        <a href="mailto:abrarsaleem343@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">abrarsaleem343@gmail.com</a>
+                        <a href="mailto:abrarqazi9296@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">Primary: abrarqazi9296@gmail.com</a>
+                        <a href="mailto:abrarsaleem343@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">Secondry: abrarsaleem343@gmail.com</a>
                     </div>
 
                     <div class="md:col-span-2 flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
