--- a/skills.html
+++ b/skills.html
@@ -82,6 +82,9 @@
                     <li>RESTful APIs</li>
                     <li>Entity Framework Core</li>
                     <li>Identity Server</li>
+                    <li>Dapper</li>
+                    <li>Clean Architecture</li>
+
                 </ul>
             </div>
 
@@ -91,6 +94,8 @@
                     <li>Angular</li>
                     <li>JavaScript & jQuery</li>
                     <li>HTML5 & CSS3</li>
+                    <li>Vue.js</li>
+                    <li>Bootsrap & tailwindcss</li>
                     <li>AJAX & Razor Pages</li>
                 </ul>
             </div>
@@ -98,10 +103,14 @@
             <div class="glass p-8 rounded-2xl border border-slate-800 hover:border-cyan-500/50 transition" data-aos="zoom-in" data-aos-delay="200">
                 <h3 class="text-xl font-bold text-cyan-400 mb-4">Databases & Tools</h3>
                 <ul class="text-gray-400 space-y-2 text-sm">
-                    <li>MS SQL Server & T-SQL</li>
                     <li>SSMS & Visual Studio</li>
+                    <li>Vs code</li>
+                    <li>MS SQL Server</li>
                     <li>Git, GitHub & Azure</li>
-                    <li>TDD & Design Patterns</li>
+                    <li>Bitbucket</li>
+                    <li>Postman & Swagger</li>
+
+
                 </ul>
             </div>
         </div>
