--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,6 @@
         +92 349 5749679
     </a>
 </div>
-
-
                     <div class="flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
                         <div class="bg-cyan-500/10 p-4 rounded-full mb-4">
                             <svg class="w-8 h-8 text-cyan-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -111,8 +109,8 @@
                             </svg>
                         </div>
                         <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">Email</p>
-                        <a href="mailto:abrarqazi9296@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">Primary: abrarqazi9296@gmail.com</a>
-                        <a href="mailto:abrarsaleem343@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">Secondry: abrarsaleem343@gmail.com</a>
+                        <a href="mailto:abrarqazi9296@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">abrarqazi9296@gmail.com</a>
+                        <a href="mailto:abrarsaleem343@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">abrarsaleem343@gmail.com</a>
                     </div>
 
                     <div class="md:col-span-2 flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
