updated linkedin text

--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
                             </svg>
                         </div>
                         <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">Professional Network</p>
-                        <a href="https://linkedin.com/in/abrar-saleem" target="_blank" class="text-gray-200 font-semibold hover:text-cyan-400 transition">linkedin.com/in/abrar-saleem</a>
+                        <a href="https://linkedin.com/in/abrar-saleem" target="_blank" class="text-gray-200 font-semibold hover:text-cyan-400 transition">Abrar Saleem</a>
                     </div>
                 </div>
             </div>
