--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abrar Saleem | Software Engineer</title>
+    <title>Contact | Abrar Saleem</title>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="/Portofolio/assets/css/style.css" rel="stylesheet">
 
     <style>
         .glass {
-            background: rgba(255, 255, 255, 0.03);
+            background: rgba(15, 23, 42, 0.8);
             backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        .card-glass {
+            background: rgba(30, 41, 59, 0.3);
+            backdrop-filter: blur(8px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            transition: all 0.3s ease;
+        }
+        .card-glass:hover {
+            background: rgba(30, 41, 59, 0.5);
+            transform: translateY(-5px);
         }
         .gradient-text {
             background: linear-gradient(90deg, #06b6d4 0%, #3b82f6 100%);
@@ -20,45 +31,39 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        .nav-link-active {
+            color: #22d3ee;
+            font-weight: 600;
+        }
         body { background-color: #0f172a; color: #f1f5f9; }
     </style>
-    <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        document.body.style.visibility = "visible";
-    });
-</script>
 </head>
-<body>  
-    
+
+<body class="overflow-x-hidden">
+
 <nav class="fixed w-full z-50 glass px-6 py-4">
-    <div class="flex justify-between items-center">
-        <div class="text-2xl font-bold gradient-text">
+    <div class="max-w-7xl mx-auto flex justify-between items-center">
+        <div class="text-2xl font-bold gradient-text tracking-tighter">
             <a href="index.html">ABRAR SALEEM</a>
         </div>
 
-        <!-- Desktop Menu -->
-        <div class="hidden md:flex space-x-8">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="skills.html" class="nav-link">Skills</a>
-            <a href="experience.html" class="nav-link">Experience</a>
-            <a href="projects.html" class="nav-link">Projects</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+        <div class="hidden md:flex space-x-8 items-center">
+            <a href="index.html" class="nav-link hover:text-cyan-400 transition">Home</a>
+            <a href="about.html" class="nav-link hover:text-cyan-400 transition">About</a>
+            <a href="skills.html" class="nav-link hover:text-cyan-400 transition">Skills</a>
+            <a href="experience.html" class="nav-link hover:text-cyan-400 transition">Experience</a>
+            <a href="projects.html" class="nav-link hover:text-cyan-400 transition">Projects</a>
+            <a href="contact.html" class="nav-link hover:text-cyan-400 transition">Contact</a>
         </div>
 
-        <!-- Hamburger -->
-        <button id="menuBtn" class="md:hidden focus:outline-none">
-            <svg class="w-8 h-8 text-gray-200" fill="none" stroke="currentColor" stroke-width="2"
-                viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M4 6h16M4 12h16M4 18h16" />
+        <button id="menuBtn" class="md:hidden focus:outline-none p-2 hover:bg-slate-800 rounded-lg transition">
+            <svg class="w-8 h-8 text-gray-200" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
             </svg>
         </button>
     </div>
 
-    <!-- Mobile Menu -->
-    <div id="mobileMenu"
-        class="hidden md:hidden mt-4 bg-slate-900/95 rounded-xl p-6 flex flex-col space-y-4">
+    <div id="mobileMenu" class="hidden md:hidden mt-4 bg-slate-800 rounded-2xl p-6 flex flex-col space-y-4 shadow-2xl border border-slate-700">
         <a href="index.html" class="nav-link">Home</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="skills.html" class="nav-link">Skills</a>
@@ -68,94 +73,84 @@
     </div>
 </nav>
 
+<section class="py-24 min-h-screen pt-40 px-6">
+    <div class="max-w-4xl mx-auto">
 
-    <section class="py-20 bg-slate-900 min-h-screen pt-40 px-6">
-        <div class="max-w-4xl mx-auto">
-            <h2 class="text-4xl font-bold mb-12 gradient-text text-center" data-aos="fade-down">Get In Touch</h2>
+        <header class="text-center mb-16" data-aos="fade-down">
+            <h2 class="text-4xl md:text-5xl font-bold gradient-text inline-block">Let’s Work Together</h2>
+            <div class="h-1 w-20 bg-cyan-500 mx-auto mt-4 rounded-full"></div>
+            <p class="text-gray-400 max-w-2xl mx-auto mt-8 text-lg">
+                Open to <strong>freelance work</strong>, full-time roles, and long-term collaborations.
+            </p>
+        </header>
+
+        <div class="card-glass p-10 md:p-16 rounded-3xl border border-slate-800 shadow-2xl relative overflow-hidden" data-aos="zoom-in">
+            <div class="absolute top-0 left-0 w-64 h-64 bg-cyan-500/5 blur-3xl rounded-full -translate-x-1/2 -translate-y-1/2"></div>
             
-            <div class="glass p-10 md:p-16 rounded-3xl border border-slate-800 shadow-2xl" data-aos="zoom-in">
-                <div class="text-center mb-12">
-                    <h3 class="text-2xl font-bold text-white mb-4">Contact Details</h3>
-                    <p class="text-gray-400">Feel free to reach out for collaborations, project inquiries, or professional opportunities.</p>
-                </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 relative z-10">
 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-<div class="flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
-    <div class="bg-emerald-500/10 p-4 rounded-full mb-4">
-        <!-- WhatsApp Icon -->
-        <svg class="w-8 h-8 text-emerald-400" viewBox="0 0 32 32" fill="currentColor">
-            <path d="M16.003 3.2c-7.064 0-12.8 5.736-12.8 12.8 0 2.255.586 4.461 1.699 6.411L3.2 28.8l6.584-1.664A12.745 12.745 0 0016.003 28.8c7.064 0 12.797-5.736 12.797-12.8 0-7.064-5.733-12.8-12.797-12.8zm0 23.04c-2.085 0-4.133-.547-5.923-1.584l-.424-.251-3.907.989 1.043-3.803-.277-.453a10.2 10.2 0 01-1.549-5.338c0-5.645 4.593-10.24 10.24-10.24 5.645 0 10.237 4.595 10.237 10.24 0 5.647-4.592 10.24-10.237 10.24zm5.67-7.731c-.309-.155-1.829-.901-2.112-1.003-.283-.104-.491-.155-.699.155-.208.309-.803 1.003-.985 1.211-.181.208-.363.233-.672.077-.309-.155-1.303-.48-2.482-1.531-.917-.817-1.537-1.827-1.718-2.136-.181-.309-.019-.477.136-.632.139-.138.309-.363.464-.545.155-.181.208-.309.309-.517.104-.208.052-.389-.026-.545-.078-.155-.699-1.685-.957-2.307-.251-.603-.507-.521-.699-.531l-.597-.01c-.208 0-.545.077-.829.389-.283.309-1.086 1.061-1.086 2.587 0 1.525 1.112 3.001 1.267 3.209.155.208 2.19 3.345 5.305 4.692.741.32 1.318.512 1.771.656.744.237 1.421.203 1.957.123.597-.089 1.829-.747 2.085-1.469.257-.721.257-1.339.181-1.469-.078-.129-.283-.207-.592-.361z"/>
-        </svg>
-    </div>
-
-    <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">
-        WhatsApp
-    </p>
-
-    <a href="https://wa.me/923118990110" target="_blank"
-       class="text-gray-200 font-semibold hover:text-emerald-400 transition">
-        +92 311 8990110
-    </a>
-
-    <a href="https://wa.me/923495749679" target="_blank"
-       class="text-gray-200 font-semibold hover:text-emerald-400 transition">
-        +92 349 5749679
-    </a>
-</div>
-                    <div class="flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
-                        <div class="bg-cyan-500/10 p-4 rounded-full mb-4">
-                            <svg class="w-8 h-8 text-cyan-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
-                            </svg>
-                        </div>
-                        <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">Email</p>
-                        <a href="mailto:abrarqazi9296@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">abrarqazi9296@gmail.com</a>
-                        <a href="mailto:abrarsaleem343@gmail.com" class="text-gray-200 font-semibold hover:text-cyan-400 transition">abrarsaleem343@gmail.com</a>
+                <div class="flex flex-col items-center p-8 bg-slate-900/40 rounded-2xl border border-slate-700/50 hover:border-emerald-500/50 transition duration-300">
+                    <div class="bg-emerald-500/10 p-4 rounded-xl mb-6">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8 text-emerald-400">
+                            <path d="M12.04 2C6.56 2 2.04 6.52 2.04 12c0 1.89.5 3.73 1.45 5.36L2 22l4.77-1.43A9.94 9.94 0 0012.04 22c5.48 0 10-4.52 10-10s-4.52-10-10-10z"/>
+                        </svg>
                     </div>
-
-                    <div class="md:col-span-2 flex flex-col items-center p-6 bg-slate-800/50 rounded-2xl border border-slate-700 hover:border-cyan-500 transition duration-300">
-                        <div class="bg-cyan-500/10 p-4 rounded-full mb-4">
-                            <svg class="w-8 h-8 text-cyan-500" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                            </svg>
-                        </div>
-                        <p class="text-sm text-gray-500 uppercase font-bold tracking-widest mb-2">Professional Network</p>
-                        <a href="https://linkedin.com/in/abrar-saleem" target="_blank" class="text-gray-200 font-semibold hover:text-cyan-400 transition">Abrar Saleem</a>
+                    <p class="text-xs text-gray-500 uppercase font-bold tracking-widest mb-4">WhatsApp</p>
+                    <div class="space-y-2 text-center">
+                        <a href="https://wa.me/923118990110" target="_blank" class="block text-gray-200 font-semibold hover:text-emerald-400 transition text-lg">+92 311 8990110</a>
+                        <a href="https://wa.me/923495749679" target="_blank" class="block text-gray-200 font-semibold hover:text-emerald-400 transition text-lg">+92 349 5749679</a>
                     </div>
                 </div>
+
+                <div class="flex flex-col items-center p-8 bg-slate-900/40 rounded-2xl border border-slate-700/50 hover:border-cyan-500/50 transition duration-300">
+                    <div class="bg-cyan-500/10 p-4 rounded-xl mb-6">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-cyan-500">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25H4.5a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0L12 13.5 2.25 6.75"/>
+                        </svg>
+                    </div>
+                    <p class="text-xs text-gray-500 uppercase font-bold tracking-widest mb-4">Email</p>
+                    <div class="space-y-2 text-center">
+                        <a href="mailto:abrarqazi9296@gmail.com" class="block text-gray-200 font-semibold hover:text-cyan-400 transition text-sm break-all">abrarqazi9296@gmail.com</a>
+                        <a href="mailto:abrarsaleem343@gmail.com" class="block text-gray-200 font-semibold hover:text-cyan-400 transition text-sm break-all">abrarsaleem343@gmail.com</a>
+                    </div>
+                </div>
+
+                <div class="md:col-span-2 flex flex-col items-center p-8 bg-slate-900/40 rounded-2xl border border-slate-700/50 hover:border-blue-500/50 transition duration-300">
+                    <div class="bg-blue-500/10 p-4 rounded-xl mb-6">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8 text-blue-500">
+                            <path d="M19 0h-14C2.24 0 0 2.24 0 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5V5c0-2.76-2.24-5-5-5zM7 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                        </svg>
+                    </div>
+                    <p class="text-xs text-gray-500 uppercase font-bold tracking-widest mb-4">LinkedIn</p>
+                    <a href="https://linkedin.com/in/abrar-saleem" target="_blank" class="text-gray-200 font-semibold hover:text-blue-400 transition text-lg">linkedin.com/in/abrar-saleem</a>
+                </div>
+
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <footer class="py-10 text-center border-t border-slate-800 mt-20">
-        <p class="text-gray-500 text-sm">© 2025 Abrar Saleem | Software Engineer</p>
-    </footer>
+<footer class="py-12 text-center border-t border-slate-800 bg-slate-950/50">
+    <div class="max-w-7xl mx-auto px-6">
+        <p class="text-gray-400 text-sm tracking-widest uppercase">© 2025 Abrar Saleem | Software Engineer</p>
+    </div>
+</footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     const currentPage = location.pathname.split("/").pop() || "index.html";
-
     document.querySelectorAll(".nav-link").forEach(link => {
         if (link.getAttribute("href") === currentPage) {
             link.classList.add("nav-link-active");
         }
     });
 
-    // Mobile menu toggle
     const menuBtn = document.getElementById("menuBtn");
     const mobileMenu = document.getElementById("mobileMenu");
+    menuBtn?.addEventListener("click", () => mobileMenu.classList.toggle("hidden"));
 
-    menuBtn?.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-    });
+    AOS.init({ duration: 1000, once: true, offset: 100 });
 </script>
 
-    <script>
-        AOS.init({ 
-            duration: 1000, 
-            once: true,
-            offset: 100 
-        });
-    </script>
 </body>
 </html>
