--- a/skills.html
+++ b/skills.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abrar Saleem | Software Engineer</title>
+    <title>Skills | Abrar Saleem</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="/Portofolio/assets/css/style.css" rel="stylesheet">
 
     <style>
         .glass {
-            background: rgba(255, 255, 255, 0.03);
+            background: rgba(15, 23, 42, 0.8);
             backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        .card-glass {
+            background: rgba(30, 41, 59, 0.3);
+            backdrop-filter: blur(8px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            transition: all 0.3s ease;
+        }
+        .card-glass:hover {
+            background: rgba(30, 41, 59, 0.5);
+            border-color: rgba(34, 211, 238, 0.3);
+            transform: translateY(-5px);
         }
         .gradient-text {
             background: linear-gradient(90deg, #06b6d4 0%, #3b82f6 100%);
@@ -20,45 +31,38 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        .nav-link-active {
+            color: #22d3ee;
+            font-weight: 600;
+        }
         body { background-color: #0f172a; color: #f1f5f9; }
     </style>
-    <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        document.body.style.visibility = "visible";
-    });
-</script>
 </head>
-<body>  
+<body class="overflow-x-hidden">   
     
 <nav class="fixed w-full z-50 glass px-6 py-4">
-    <div class="flex justify-between items-center">
-        <div class="text-2xl font-bold gradient-text">
+    <div class="max-w-7xl mx-auto flex justify-between items-center">
+        <div class="text-2xl font-bold gradient-text tracking-tighter">
             <a href="index.html">ABRAR SALEEM</a>
         </div>
 
-        <!-- Desktop Menu -->
-        <div class="hidden md:flex space-x-8">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About</a>
-            <a href="skills.html" class="nav-link">Skills</a>
-            <a href="experience.html" class="nav-link">Experience</a>
-            <a href="projects.html" class="nav-link">Projects</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+        <div class="hidden md:flex space-x-8 items-center">
+            <a href="index.html" class="nav-link hover:text-cyan-400 transition">Home</a>
+            <a href="about.html" class="nav-link hover:text-cyan-400 transition">About</a>
+            <a href="skills.html" class="nav-link hover:text-cyan-400 transition">Skills</a>
+            <a href="experience.html" class="nav-link hover:text-cyan-400 transition">Experience</a>
+            <a href="projects.html" class="nav-link hover:text-cyan-400 transition">Projects</a>
+            <a href="contact.html" class="nav-link hover:text-cyan-400 transition">Contact</a>
         </div>
 
-        <!-- Hamburger -->
-        <button id="menuBtn" class="md:hidden focus:outline-none">
-            <svg class="w-8 h-8 text-gray-200" fill="none" stroke="currentColor" stroke-width="2"
-                viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M4 6h16M4 12h16M4 18h16" />
+        <button id="menuBtn" class="md:hidden focus:outline-none p-2 hover:bg-slate-800 rounded-lg transition">
+            <svg class="w-8 h-8 text-gray-200" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
             </svg>
         </button>
     </div>
 
-    <!-- Mobile Menu -->
-    <div id="mobileMenu"
-        class="hidden md:hidden mt-4 bg-slate-900/95 rounded-xl p-6 flex flex-col space-y-4">
+    <div id="mobileMenu" class="hidden md:hidden mt-4 bg-slate-800 rounded-2xl p-6 flex flex-col space-y-4 shadow-2xl border border-slate-700">
         <a href="index.html" class="nav-link">Home</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="skills.html" class="nav-link">Skills</a>
@@ -68,65 +72,117 @@
     </div>
 </nav>
 
-
-<section class="py-20 bg-slate-900 min-h-screen pt-32 px-6">
+<section class="py-24 min-h-screen pt-32 px-6">
     <div class="max-w-6xl mx-auto text-center">
-        <h2 class="text-4xl font-bold mb-16 gradient-text" data-aos="fade-down">Technical Skills</h2>
-        
+        <header class="mb-16" data-aos="fade-down">
+            <h2 class="text-4xl md:text-5xl font-bold gradient-text inline-block">Technical Skills</h2>
+            <div class="h-1 w-20 bg-cyan-500 mx-auto mt-4 rounded-full"></div>
+            <p class="text-gray-400 max-w-2xl mx-auto mt-8 text-lg">
+                My skill set focuses on building <strong>production-ready web applications</strong> with clean architecture, performance, and long-term maintainability in mind.
+            </p>
+        </header>
+
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div class="glass p-8 rounded-2xl border border-slate-800 hover:border-cyan-500/50 transition" data-aos="zoom-in">
-                <h3 class="text-xl font-bold text-cyan-400 mb-4">Backend & API</h3>
-                <ul class="text-gray-400 space-y-2 text-sm">
-                    <li>.NET Core & .NET Web API</li>
-                    <li>C# & Microservices</li>
-                    <li>RESTful APIs</li>
-                    <li>Entity Framework Core</li>
-                    <li>Identity Server</li>
-                    <li>Dapper</li>
-                    <li>Clean Architecture</li>
-
+            <div class="card-glass p-8 rounded-3xl border border-slate-800 shadow-xl" data-aos="zoom-in">
+                <div class="w-12 h-12 bg-cyan-500/10 rounded-xl flex items-center justify-center mb-6 mx-auto">
+                    <svg class="w-6 h-6 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M5 12a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v4a2 2 0 01-2 2M5 12a2 2 0 00-2 2v4a2 2 0 002 2h14a2 2 0 002-2v-4a2 2 0 00-2-2m-2-4h.01M17 16h.01" /></svg>
+                </div>
+                <h3 class="text-xl font-bold text-white mb-6">Backend & API Engineering</h3>
+                <ul class="text-gray-400 space-y-4 text-left text-sm">
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Design & development of scalable <strong>ASP.NET Core Web APIs</strong></span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span><strong>Clean Architecture</strong> & separation of concerns</span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Secure authentication (Identity, <strong>JWT</strong>)</span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Data access using <strong>EF Core & Dapper</strong></span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>RESTful APIs built for real production systems</span>
+                    </li>
                 </ul>
             </div>
 
-            <div class="glass p-8 rounded-2xl border border-slate-800 hover:border-cyan-500/50 transition" data-aos="zoom-in" data-aos-delay="100">
-                <h3 class="text-xl font-bold text-cyan-400 mb-4">Frontend Development</h3>
-                <ul class="text-gray-400 space-y-2 text-sm">
-                    <li>Angular</li>
-                    <li>JavaScript & jQuery</li>
-                    <li>HTML5 & CSS3</li>
-                    <li>Vue.js</li>
-                    <li>Bootsrap & tailwindcss</li>
-                    <li>AJAX & Razor Pages</li>
+            <div class="card-glass p-8 rounded-3xl border border-slate-800 shadow-xl" data-aos="zoom-in" data-aos-delay="100">
+                <div class="w-12 h-12 bg-blue-500/10 rounded-xl flex items-center justify-center mb-6 mx-auto">
+                    <svg class="w-6 h-6 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" /></svg>
+                </div>
+                <h3 class="text-xl font-bold text-white mb-6">Frontend Development</h3>
+                <ul class="text-gray-400 space-y-4 text-left text-sm">
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Modern <strong>Angular</strong> with clean state management</span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Responsive UI using <strong>Tailwind & Bootstrap</strong></span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Component-driven development</span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Integration with <strong>REST APIs</strong> & async data</span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Modular development with <strong>Vue.js</strong></span>
+                    </li>
                 </ul>
             </div>
 
-            <div class="glass p-8 rounded-2xl border border-slate-800 hover:border-cyan-500/50 transition" data-aos="zoom-in" data-aos-delay="200">
-                <h3 class="text-xl font-bold text-cyan-400 mb-4">Databases & Tools</h3>
-                <ul class="text-gray-400 space-y-2 text-sm">
-                    <li>SSMS & Visual Studio</li>
-                    <li>Vs code</li>
-                    <li>MS SQL Server</li>
-                    <li>Git, GitHub & Azure</li>
-                    <li>Bitbucket</li>
-                    <li>Postman & Swagger</li>
-
-
+            <div class="card-glass p-8 rounded-3xl border border-slate-800 shadow-xl" data-aos="zoom-in" data-aos-delay="200">
+                <div class="w-12 h-12 bg-purple-500/10 rounded-xl flex items-center justify-center mb-6 mx-auto">
+                    <svg class="w-6 h-6 text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.58 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.58 4 8 4s8-1.79 8-4M4 7c0-2.21 3.58-4 8-4s8 1.79 8 4m0 5c0 2.21-3.58 4-8 4s-8-1.79-8-4" /></svg>
+                </div>
+                <h3 class="text-xl font-bold text-white mb-6">Databases & Tooling</h3>
+                <ul class="text-gray-400 space-y-4 text-left text-sm">
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span><strong>Complex SQL</strong> queries & performance tuning</span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Database design using <strong>MS SQL Server</strong></span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Professional workflow with <strong>Git & GitHub</strong></span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>API documentation using <strong>Swagger</strong></span>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="text-cyan-500 mr-2">▹</span>
+                        <span>Exposure to cloud using <strong>Azure</strong></span>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
 </section>
 
+<footer class="py-12 text-center border-t border-slate-800 bg-slate-950/50">
+    <div class="max-w-7xl mx-auto px-6">
+        <p class="text-gray-400 text-sm tracking-widest uppercase">© 2025 Abrar Saleem | Software Engineer</p>
+    </div>
+</footer>
 
-
-<footer class="py-10 text-center border-t border-slate-800 mt-20">
-        <p class="text-gray-500 text-sm">© 2025 Abrar Saleem | Software Engineer</p>
-    </footer>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
+    // Navigation Logic
     const currentPage = location.pathname.split("/").pop() || "index.html";
-
     document.querySelectorAll(".nav-link").forEach(link => {
         if (link.getAttribute("href") === currentPage) {
             link.classList.add("nav-link-active");
@@ -136,18 +192,16 @@
     // Mobile menu toggle
     const menuBtn = document.getElementById("menuBtn");
     const mobileMenu = document.getElementById("mobileMenu");
-
     menuBtn?.addEventListener("click", () => {
         mobileMenu.classList.toggle("hidden");
     });
-</script>
 
-    <script>
-        AOS.init({ 
-            duration: 1000, 
-            once: true,
-            offset: 100 
-        });
-    </script>
+    // Initialize AOS
+    AOS.init({ 
+        duration: 1000, 
+        once: true,
+        offset: 100 
+    });
+</script>
 </body>
 </html>
