--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                 </p>
 
                 <p class="text-gray-300 text-lg leading-relaxed">
-                    I currently work remotely with an <span class="text-cyan-400 font-semibold">Australian company</span>, contributing across the full development lifecycle — 
+                    I currently work in an <span class="text-cyan-400 font-semibold">Medical transcription and billing company (MTBC)</span>, contributing across the full development lifecycle — 
                     from requirements and architecture to deployment — on production systems used by real users.
                 </p>
             </div>
